--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,52 +10,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  flutter_svg: ^2.0.10+1
+  cupertino_icons: ^1.0.8
+  flutter_svg: ^2.1.0
   dio: ^5.8.0+1
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
-  talker_flutter: ^4.4.0
-  talker_dio_logger: ^4.4.0
-  talker_bloc_logger: ^4.4.0
+  talker_flutter: ^4.7.6
+  talker_dio_logger: ^4.7.6
+  talker_bloc_logger: ^4.7.6
   json_annotation: ^4.9.0
+  auto_route: ^10.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  json_serializable: ^6.8.0
-  build_runner: 
+  flutter_lints: ^5.0.0
+  json_serializable: ^6.9.5
+  auto_route_generator: ^10.0.1
+  build_runner:
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/svg/
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
